<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PrideActivity"
    android:orientation="vertical"
    tools:context="fr.pridemobile.activity.MainActivity" >

    <EditText
        android:id="@+id/login"
        style="@style/PrideInput"
        android:hint="@string/hint_login" />

    <EditText
        android:id="@+id/password"
        style="@style/PrideInput"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnConnect"
        style="@style/PrideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_connexion" />
    
    <Button
        android:id="@+id/btnInscription"
        style="@style/PrideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_inscription" />
    
</LinearLayout>
