<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PrideActivity"
    android:orientation="vertical"
    tools:context="fr.pridemobile.activity.InscriptionActivity" >

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:src="@drawable/pride2"
        android:contentDescription="Logo pride" />
    
    <EditText
        android:id="@+id/login"
        style="@style/PrideInput"
        android:hint="@string/hint_login" />

    <EditText
        android:id="@+id/password"
        style="@style/PrideInput"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />
    
    <EditText
        android:id="@+id/email"
        style="@style/PrideInput"
        android:hint="@string/hint_email" />

    <Button
        android:id="@+id/btnInscription"
        style="@style/PrideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_inscription" />
    
</LinearLayout>
