<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fr.pridemobile.activity.MesParticipationsActivity" >

    <include layout="@layout/toolbar" />

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/content_mesprojets_activity"
            style="@style/PrideActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/titre_projet"
                style="@style/PrideInput"
                android:hint="@string/hint_titre_projet"/>
            
            <EditText
                android:id="@+id/description_projet"
                style="@style/PrideBigInput"
                android:hint="@string/hint_description_projet"/>

            <Button
                android:id="@+id/btn_creer_projet"
                style="@style/PrideButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_valider_creation_projet" />
            
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start|start"
            android:background="#fff" >

            <ListView
                android:id="@+id/left_drawer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:divider="#eee"
                android:dividerHeight="1dp" />
        </RelativeLayout>
    </android.support.v4.widget.DrawerLayout>

</LinearLayout>